changed side and toolbar font and fixed spacing between sidebar links

--- a/client/src/components/DashboardComponents/SideNav/NavSidebar/style.css
+++ b/client/src/components/DashboardComponents/SideNav/NavSidebar/style.css
@@ -32,7 +32,7 @@
     flex-direction: column;
     justify-content: center;
     padding-left: 0;
-    margin-bottom: -75px;
+    margin-bottom: -140px;
     margin-top: 25px;
     margin-left: 6px;
 }
@@ -50,6 +50,8 @@
     font-size: 1.2rem;
     text-align: center;
     padding-left: 0px;
+    font-family: 'IBM Plex Serif', serif;
+
 }
 
 /*The login users name*/
@@ -58,6 +60,7 @@
     border: none;
     text-transform: uppercase;
     font-size: 18px;
+    font-family: 'IBM Plex Serif', serif;
 }
 
 /*Users profile image*/
@@ -68,10 +71,10 @@
 /*Link styling*/
 .side-bar a:hover,
 .side-bar a:active {
-    color: teal;
+    color: rgb(11, 250, 250);
 }
 
-@media (max-width: 375px) {
+@media (max-width: 420px) {
     .teacher-btns {
         display: none;
     }
@@ -79,6 +82,13 @@
         display: none;
     }
     .side-bar.open {
-        width: 50%;
+        width: 35%;
+    }
+    .side-bar h4,
+    .side-bar a {
+        font-size: 14px;
+    }
+    .side-bar ul {
+        margin-bottom: -200px;
     }
 }
